# ground-station

./: .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml
backend/: POSTGRESQL_SETUP.md  main.py  migrate.py  pyproject.toml
backend/api/: backend_setup.py  lifespan.py
backend/api/middleware/: cors_middleware.py
backend/api/v1/aro/endpoints/: user.py
backend/api/v1/aro/models/: responses.py
backend/api/v1/mcc/endpoints/: commands.py  main_commands.py
backend/api/v1/mcc/models/: responses.py
backend/config/: config.py  database_config.py
backend/data/data_wrappers/: abstract_wrapper.py  wrappers.py
backend/data/data_wrappers/aro_wrapper/: aro_request_wrapper.py  aro_user_auth_token_wrapper.py  aro_user_data_wrapper.py  aro_user_login_wrapper.py
backend/data/data_wrappers/mcc_wrappers/: commands_wrapper.py  comms_session_wrapper.py  main_command_wrapper.py  main_telemetry_wrapper.py  packet_commands_wrapper.py  packet_telemetry_wrapper.py  packet_wrapper.py  telemetry_wrapper.py
backend/data/database/: engine.py
backend/data/resources/: callsigns.py  main_commands.py  main_telemetry.py  utils.py
backend/data/tables/: aro_user_tables.py  main_tables.py  transactional_tables.py
backend/gs_cli/: cli.py  ground_station_cli.py
backend/migrations/: env.py
backend/obc_utils/: command_utils.py
backend/python_test/: conftest.py  test_aro_data_wrapper.py  test_aro_user_api.py  test_config_manager.py  test_ephemeris.py  test_ephemeris_parser.py  test_mcc_command_endpoints.py  test_mcc_command_wrapper.py  test_retrieve_floating_commands.py
backend/python_test/test_tables/: test_aro_user.py  test_main.py  test_transactional.py
backend/resources/: main_commands.py  utils.py
backend/src/config/: config.py
backend/src/data/data_wrappers/: wrappers.py
backend/src/data/data_wrappers/aro_wrapper/: aro_request_wrapper.py  aro_user_auth_token_wrapper.py  aro_user_data_wrapper.py  aro_user_login_wrapper.py
backend/src/data/data_wrappers/mcc_wrappers/: commands_wrapper.py  comms_session_wrapper.py  packet_wrapper.py  (+5 more)
backend/src/gs_cli/: cli.py  ground_station_cli.py
backend/src/resources/: callsigns.py  main_telemetry.py
backend/state_machine/: state_machine.py
(+6 files in other folders)
