[project]
name = "Ground Station"
version = "1.0.0"
requires-python = ">=3.11"
description = "The backend for the orbital ground station"

[tool.mypy]
mypy_path = "backend"
strict = true
plugins = "pydantic.mypy"

[[tool.mypy.overrides]]
module = "ax25.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tinyaes.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyStuffing.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "skyfield.*"
ignore_missing_imports = true
