[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "backend"
version = "1.0.0"
description = "All backend code used by UW Orbital's GS subteam"

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["python_test"]

[tool.mypy]
exclude = ["python_test/*"]
strict = true
plugins = "pydantic.mypy"

[[tool.mypy.overrides]]
module = "skyfield.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ax25.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tinyaes.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyStuffing.*"
ignore_missing_imports = true

[tool.ruff]
include = ["pyproject.toml", "**/*.py"]
exclude = [
  "libs/*",
  "cmake/*",
  "build*",
  "test/*"]
target-version = "py311"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pep8-naming
    "N",
    # flake8-annotations
    "ANN",
    # flake8 builtin shadowing
    "A",
    # Documentation
    "D213", "D101", "D102", "D103", "D105"
]
ignore = ["ANN101", "ANN102"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]
